--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-<canvas id="canvas" width="1000" height="800"></canvas>
+<canvas id="canvas" width="800" height="800"></canvas>
 
-<script src="morse.js"></script> 
+<br/>
+<!-- <p>Amplitude</p><input type="range" min="0" max="100" value="1" class="slider" id="Amplitude" onchange="refresh()"><br/>
+<p>Pulsation</p><input type="range" min="0" max="100" value="0" class="slider" id="Pulsation" onchange="refresh()"><br/>
+<p>Phase</p><input type="range" min="0" max="1000" value="0" class="slider" id="Phase" onchange="refresh()"><br/> -->
+
+<script src="DataWave.js"></script> 
 
 <link rel="stylesheet" href="style.css">
